<resources>
    <string name="app_name">Hub</string>
    <string name="hint_tarefa">Nome da tarefa:</string>
    <string name="txt_data">Selecionar data</string>
    <string name="txt_hora">Selecionar horário</string>
    <string name="btn_salvar">Salvar tarefa</string>
    <string name="btn_alterar">Alterar tarefa</string>
    <string name="txt_titulo">Cadastre sua tarefa</string>
    <string name="txt_titulo2">Altere sua tarefa</string>
    <string name="txt_boavindas">Seja bem-vindo ao seu Hub!</string>
    <string name="btn_tarefas">Tarefas</string>
    <string name="txt_titulo_sobre">Sobre</string>
    <string name="btn_noticias">Notícias</string>
    <string name="btn_sobre">Sobre</string>
    <string name="btn_frases">Frase do dia</string>
    <string name="txt_titulo_frase">Frase do dia</string>
    <string name="btn_gerarf">Gerar Frase</string>
    <string name="txt_sobre">Aplicativo criado com intuito de facilitar a vida do usuário reunindo funções em um único aplicativo. \n\n Foi desenvolvido por
    Eduardo Felix, Guilherme Leite e João Pedro Cavalcante no módulo 3 do curso de programação para dispositivos móveis do programa federal           QualificaMais.
    </string>
    <string name="titulo">Tarefas</string>
    <string name="txt_titulo_noticias">Notícias</string>
    <string name="btn_g1">G1 Globo</string>
    <string name="btn_thenewscc">The News cc</string>
    <string name="btn_thenewsyorktimes">The NY Times</string>
    <string name="btn_estadao">Estadão</string>
    <string name="btn_cnn">CNN</string>

</resources>